--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,15 @@
     <!-- End Google Tag Manager -->
 
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml"/> <!-- browser theme aware favicon -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/svg+xml"/> <!-- browser theme aware favicon -->
     <meta name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
     <meta name="description"
-      content="Olympus utilizes Treasury Reserves to enable long-term price consistency and scarcity within an infinite supply system" />
+      content="BeGlobalDAO utilizes Treasury Reserves to enable long-term price consistency and scarcity within an infinite supply system" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>OlympusDAO</title>
+    <title>BeGlobalDAO</title>
   </head>
 
   <body>
